# WassersteinDictionaryLearning

./: .gitignore  README.md
cpp/: CMakeLists.txt  chrono.h  histogramIO.h  inverseWasserstein.h  kernels.h  loss.h  main_dictionary_learning.cpp  signArray.h  sse_helpers.h
cpp/CMake/: FindEigen.cmake  FindHalide.cmake
cpp/lbfgs/: lbfgs.c  lbfgs.h
